duniverse/core_kernel.v0.13.1/test/src/export_base_buffer.mlt
open! Core_kernel

module Buffer_is_from_base : module type of struct
  include Base.Buffer
end =
  Buffer

[%%expect]

module Buffer_is_from_caml : module type of struct
  include Caml.Buffer
end =
  Buffer

[%%expect
  {|
Line _, characters _-_:
Error: Signature mismatch:
       ...
       The value `add_int64_le' is required but not provided
       File "buffer.mli", line 279, characters 0-37: Expected declaration
       The value `add_int64_be' is required but not provided
       File "buffer.mli", line 273, characters 0-37: Expected declaration
       The value `add_int64_ne' is required but not provided
       File "buffer.mli", line 267, characters 0-38: Expected declaration
       The value `add_int32_le' is required but not provided
       File "buffer.mli", line 261, characters 0-37: Expected declaration
       The value `add_int32_be' is required but not provided
       File "buffer.mli", line 255, characters 0-37: Expected declaration
       The value `add_int32_ne' is required but not provided
       File "buffer.mli", line 249, characters 0-37: Expected declaration
       The value `add_int16_le' is required but not provided
       File "buffer.mli", line 243, characters 0-35: Expected declaration
       The value `add_int16_be' is required but not provided
       File "buffer.mli", line 237, characters 0-35: Expected declaration
       The value `add_int16_ne' is required but not provided
       File "buffer.mli", line 231, characters 0-35: Expected declaration
       The value `add_uint16_le' is required but not provided
       File "buffer.mli", line 225, characters 0-36: Expected declaration
       The value `add_uint16_be' is required but not provided
       File "buffer.mli", line 219, characters 0-36: Expected declaration
       The value `add_uint16_ne' is required but not provided
       File "buffer.mli", line 213, characters 0-36: Expected declaration
       The value `add_int8' is required but not provided
       File "buffer.mli", line 207, characters 0-31: Expected declaration
       The value `add_uint8' is required but not provided
       File "buffer.mli", line 201, characters 0-32: Expected declaration
       The value `of_seq' is required but not provided
       File "buffer.mli", line 177, characters 0-28: Expected declaration
       The value `add_seq' is required but not provided
       File "buffer.mli", line 173, characters 0-37: Expected declaration
       The value `to_seqi' is required but not provided
       File "buffer.mli", line 168, characters 0-37: Expected declaration
       The value `to_seq' is required but not provided
       File "buffer.mli", line 163, characters 0-28: Expected declaration
       The value `truncate' is required but not provided
       File "buffer.mli", line 155, characters 0-31: Expected declaration
       The value `output_buffer' is required but not provided
       File "buffer.mli", line 151, characters 0-44: Expected declaration
       The value `add_channel' is required but not provided
       File "buffer.mli", line 144, characters 0-48: Expected declaration
       The value `add_substitute' is required but not provided
       File "buffer.mli", line 124, characters 0-62: Expected declaration
       The value `add_utf_16be_uchar' is required but not provided
       File "buffer.mli", line 101, characters 0-45: Expected declaration
       The value `add_utf_16le_uchar' is required but not provided
       File "buffer.mli", line 94, characters 0-45: Expected declaration
       The value `add_utf_8_uchar' is required but not provided
       File "buffer.mli", line 88, characters 0-42: Expected declaration
       The value `to_bytes' is required but not provided
       File "buffer.mli", line 45, characters 0-25: Expected declaration
|}]
